WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316330
[GTK][WPE] Skia Compositor: compositing debug borders are not painted properly
https://bugs.webkit.org/show_bug.cgi?id=316330
Summary
[GTK][WPE] Skia Compositor: compositing debug borders are not painted properly
Nikolas Zimmermann
Reported
2026-06-04 12:37:20 PDT
We fail to paint them in the proper order - and to make things worse: they are currently not visible at all, fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-06-04 12:40:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66472
EWS
Comment 2
2026-06-05 02:11:35 PDT
Committed
314621@main
(7e67352d773d): <
https://commits.webkit.org/314621@main
> Reviewed commits have been landed. Closing PR #66472 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug